--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,18 +3,29 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ng serve",
-      "type": "pwa-chrome",
+      "name": ".NET Core Launch (web)",
+      "type": "coreclr",
       "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "preLaunchTask": "build",
+      "program": "${workspaceFolder}/backend/bin/Debug/net6.0/backend.dll",
+      "args": [],
+      "cwd":"${workspaceFolder}/backend",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow Listening on:\\s+(https?://\\S+)"
+      },
+      "env":{
+        "ASPNETCORE_ENVIROMENT": "Deveopment"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
     },
     {
-      "name": "ng test",
-      "type": "chrome",
-      "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
+      "name": ".NET Core Attach",
+      "type": "coreclr",
+      "request": "attach"
     }
   ]
 }
