--- a/backend/Properties/launchSettings.json
+++ b/backend/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "backend": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7299;http://localhost:5299",
       "environmentVariables": {
