--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
+    "@cloudinary/ng": "^1.9.1",
+    "@cloudinary/url-gen": "^1.9.0",
     "apexcharts": "^3.35.4",
     "jwt-decode": "^3.1.2",
     "ng-apexcharts": "^1.7.1",
