--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -13,7 +13,8 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0-beta.1" />
     <PackageReference Include="ConfigCat.Client" Version="6.5.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -21,7 +22,7 @@
     <PackageReference Include="Microsoft.ML" Version="1.5.0-preview" />
     <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.0-preview" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Profanity.Detector" Version="0.1.8" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
